--- a/index.html
+++ b/index.html
@@ -9,17 +9,24 @@
 <body>
     <h1>Dicas e produtos para ter unhas grandes e saudáveis</h1>
      <img src="unhas.jpg" alt="Unhas naturais e grandes">
-    <h2>Dicas</h2>
+    <h2>Dicas:</h2>
     <ol id="dicas">
         <li>Hidrate e empurre as cutículas ao invés de tirar</li>
+
         <li>Cerinhas para cutículas são excelentes para manter elas hidratadas</li>
+
         <li>Use sempre uma base fortalecedora</li>
+
         <li>Lixe suas unhas para evitar que elas quebrem</li>
+
         <li>Faça intervalos sem esmalte</li>
+
         <li>Use removedores de esmalte SEM acetona</li>
+
         <li>Uma boa alimentação é essencial para as unhas crescerem saudáveis</li>
+        
     </ol>
-        <h2>Produtos</h2>
+        <h2>Produtos:</h2>
         <ul id="produtos">
             <li>Amolecedor de cutículas - IDEAL</li>
             <li>Cera hidratante de cutículas - ANITA</li>
